--- a/_articles/RJ-2025-031/RJ-2025-031.Rmd
+++ b/_articles/RJ-2025-031/RJ-2025-031.Rmd
@@ -7,7 +7,7 @@ abstract: |
   the disadvantage, however, that it requires knowledge of an
   appropriate scaling factor tau(n) and that the coverage probability
   for finite n depends on the choice of m. This article presents an R
-  package moonboot
+  package [**moonboot**](https://CRAN.R-project.org/package=moonboot)
   which implements the computation of m-out-of-n bootstrap confidence
   intervals and provides functions for estimating the parameters tau(n)
   and m. By means of Monte Carlo simulations, we evaluate the different
@@ -54,11 +54,10 @@ output:
     toc: no
     mathjax: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js
     md_extension: -tex_math_single_backslash
-draft: no
 
 ---
 
-
+::::: article
 ## Introduction
 
 The bootstrap is a resampling method introduced by @efron:1979, which
@@ -84,7 +83,7 @@ bootstrap is more versatile because it neither relies on a likelihood
 function, nor does it require asymptotic normality. The bootstrap has
 thus become a standard technique for estimating confidence intervals,
 and it is even included in vanilla R with the package **boot**
-[@r:boot], which implements five different methods in `boot.ci()`.
+[@R:boot], which implements five different methods in `boot.ci()`.
 
 There are, however, bootstrap inconsistent estimators, i.e., estimators
 for which the n-out-of-n bootstrap fails to yield confidence intervals
@@ -156,11 +155,11 @@ $$\label{eq:tau}
 the estimator converges in distribution to some limit law when centered
 around the true parameter $\theta$ and scaled with $\tau_n$:
 $$\label{eq:tscaled}
-  S_n = \tau_n (T_n - \theta) \;\stackrel{n\to\infty}{\longrightarrow}\; S \; in distribution   (\#eq:tscaled)$$
-Note that condition (\@ref(eq:tau)) implies that $\tau_n\to\infty$, and
-thus the convergence (\@ref(eq:tscaled)) requires that $T_n$ converges
+  S_n = \tau_n (T_n - \theta) \;\stackrel{n\to\infty}{\longrightarrow}\; S \; \text{in distribution} (\#eq:tscaled)$$
+Note that condition \@ref(eq:tau) implies that $\tau_n\to\infty$, and
+thus the convergence \@ref(eq:tscaled) requires that $T_n$ converges
 to $\theta$ in probability (in other words: $T_n$ must be consistent),
-because it follows from (\@ref(eq:tscaled)) that
+because it follows from \@ref(eq:tscaled) that
 $$P(|T_n-\theta|>\varepsilon) = F_n(-\tau_n\varepsilon)+(1-F_n(\tau_n\varepsilon)) \;\stackrel{n\to\infty}{\longrightarrow}\; 0$$
 where $F_n$ is the cumulative distribution function of $S_n$. Moreover,
 if additionally the second moment of $S_n$ converges to some constant,
@@ -174,8 +173,8 @@ This relationship allows one to determine $\tau_n$ theoretically by
 means of an analytical calculation, or to estimate it by means of Monte
 Carlo simulations.
 
-@politis:1994 have shown that, under the assumptions (\@ref(eq:tscaled))
-and (\@ref(eq:tau)), a confidence interval with asymptotic coverage
+@politis:1994 have shown that, under the assumptions \@ref(eq:tscaled)
+and \@ref(eq:tau), a confidence interval with asymptotic coverage
 probability $(1-\alpha)$ can be constructed as
 $$\label{eq:ci-m-out-of-n}
   \left[ T_n - \frac{q(1-\alpha/2)}{\tau_n},\; T_n - \frac{q(\alpha/2)}{\tau_n} \right]   (\#eq:ci-m-out-of-n)$$
@@ -195,11 +194,11 @@ $$\label{eq:ci-norm}
 In **moonboot**, this is implemented by `mboot.ci(..., method="norm")`.
 Although this interval is only reasonable for asymptotically normal
 estimators, its coverage probability can have a faster convergence to
-the nominal value than the interval (\@ref(eq:ci-m-out-of-n)) provided
+the nominal value than the interval \@ref(eq:ci-m-out-of-n) provided
 asymptotic normality indeed holds [@dalitz:2024].
 
 @sherman:2004 observed that the scaling with $\tau_m/\tau_n$ in
-(\@ref(eq:ci-m-out-of-n)) can be omitted if the interval is centered
+\@ref(eq:ci-m-out-of-n) can be omitted if the interval is centered
 around one of the $T_m$ instead of $T_n$. They suggested using the first
 $m$ samples for computing $T_m$, but this is an arbitrary choice and
 thus even the location of the confidence interval is not uniquely
@@ -220,18 +219,18 @@ data. In **moonboot**, this method is implemented by
 
 ### Estimation of $\tau_n$
 
-According to Eq. (\@ref(eq:vartn)), the formula for the scaling factor
+According to Eq. \@ref(eq:vartn), the formula for the scaling factor
 $\tau_n$ can be determined by an analytic investigation of
 $\operatorname{Var}(T_n)$, which can not only be difficult for some
 estimators, but it requires an ad hoc study of the specific estimator
 $T_n$ under consideration. This thwarts the application of the
 m-out-of-n bootstrap out-of-the-box.
 
-Fortunately, the relationship (\@ref(eq:vartn)) makes it possible to
+Fortunately, the relationship \@ref(eq:vartn) makes it possible to
 estimate $\tau_n$ by another bootstrap [@bertail:1999]. If the variance
 $V_m=\operatorname{Var}(T_m^*)$ is estimated by sampling with different
 subsampling sizes $m$ and $\tau_n$ is assumed to be of the form
-$\tau_n=n^\beta$, then the asymptotic relationship (\@ref(eq:vartn))
+$\tau_n=n^\beta$, then the asymptotic relationship \@ref(eq:vartn)
 becomes
 $$\label{eq:bertail}
   \log V_m \approx -2\beta\log m + \log V   (\#eq:bertail)$$
@@ -251,7 +250,7 @@ well for some of our estimators.
 the variance, but as the method involves taking logarithms, this makes
 no sense when the estimator tends to be negative or close to zero. As a
 workaround, [@politis:1999] suggested replacing $V_m$ in
-Eq. (\@ref(eq:bertail)) with the average of quantile ranges
+Eq. \@ref(eq:bertail) with the average of quantile ranges
 $$Q_m = \frac{1}{J}\sum_{j=1}^J \left( \operatorname{quantile}(T_m^*, \alpha^{high}_j) - \operatorname{quantile}(T_m^*, \alpha^{low}_j) \right)$$
 We have implemented this, too, with the choice
 $\alpha^{high}_j=0.75+j\cdot 0.05$ and $\alpha^{low}_j=0.25-j\cdot 0.05$
@@ -424,7 +423,7 @@ sub-indexing. The interface consists of the following two functions:
 
 :    \
     Estimates the confidence interval with
-    Eqs. (\@ref(eq:ci-m-out-of-n)) ("basic") or (\@ref(eq:ci-norm))
+    Eqs. \@ref(eq:ci-m-out-of-n) ("basic") or \@ref(eq:ci-norm)
     ("norm"). *tau* must be a function that computes $\tau_n$ from its
     argument $n$. If it is not provided, it is estimated with
     `estimate.tau()` with the default settings of this function.
@@ -438,32 +437,28 @@ $\tau_n$ and a choice for the subsample size $m$. For the cases that
 $\tau_n$ is not known or that $m$ shall be chosen in a data-based way,
 two other functions are provided:
 
-<dl>
-<dt><code>estimate.tau(data, statistic, R=1000, replace=FALSE, min.m=3,<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;gamma=seq(0.2, 0.7, length.out=5), method="variance", ...)</code></dt>
-<dd>
+`estimate.tau(data, statistic, R=1000, replace=FALSE, min.m=3,`\
+`             gamma=seq(0.2, 0.7, length.out=5), method="variance", ...)`
 
-Estimates the scaling factor with the method by @bertail:1999. The
-values for $m$ are tried out as $m_i=n^{\gamma_i}$. *min.m* is the
-minimum sample size for which the statistic makes sense and can be
-computed. The estimation is based on the scaling behavior of the
-variance (`method="variance"`) or of the quantile ranges
-(`method="quantile"`).
+:    \
+    Estimates the scaling factor with the method by @bertail:1999. The
+    values for $m$ are tried out as $m_i=n^{\gamma_i}$. *min.m* is the
+    minimum sample size for which the statistic makes sense and can be
+    computed. The estimation is based on the scaling behavior of the
+    variance (`method="variance"`) or of the quantile ranges
+    (`method="quantile"`).
 
-</dd>
-<dt><code>estimate.m(data, statistic, tau, R=1000, replace=FALSE, min.m=3,<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;method="bickel", params=NULL, ...)</code></dt>
-<dd>
+`estimate.m(data, statistic, tau, R=1000, replace=FALSE, min.m=3,`\
+`           method="bickel", params=NULL, ...)`
 
-Estimates $m$ with the method by [@bickel:2008] (`method="bickel"`),
-the method by @goetze:2001 (`method="goetze"`), or with the
-volatility index (`method="politis"`). *params* is a list that can
-be used to pass additional parameters for the underlying method,
-e.g. `params=list(q=0.75)` for the method by [@bickel:2008]. *min.m*
-is the minimum sample size for which the statistic makes sense and
-can be computed.
-
-</dd>
-</dl>
-
+:    \
+    Estimates $m$ with the method by [@bickel:2008] (`method="bickel"`),
+    the method by @goetze:2001 (`method="goetze"`), or with the
+    volatility index (`method="politis"`). *params* is a list that can
+    be used to pass additional parameters for the underlying method,
+    e.g. `params=list(q=0.75)` for the method by [@bickel:2008]. *min.m*
+    is the minimum sample size for which the statistic makes sense and
+    can be computed.
 
 ### Typical usage
 
@@ -538,7 +533,7 @@ $$\label{eq:max:dist}
   n t^{n-1}\theta^{-n} &  for 0\leq t\leq\theta \\ 0 &  else
   \end{array}\right.   (\#eq:maxdist)$$
 This estimator is neither root-n consistent, nor asymptotically normal.
-The scaling factor $\tau_n$ can be computed from Eq. (\@ref(eq:maxdist))
+The scaling factor $\tau_n$ can be computed from Eq. \@ref(eq:maxdist)
 as
 $$\label{eq:max:tau}
   \operatorname{Var}(\hat{\theta}) = \theta^2\frac{n}{(n+2)(n+1)^2} \stackrel{n\to\infty}{\sim} \frac{\theta^2}{n^2} \quad\Rightarrow\quad \tau_n = n   (\#eq:maxtau)$$
@@ -795,7 +790,7 @@ not known, in general.
 
 ## Violation of the assumptions
 
-The assumptions (\@ref(eq:tau)) & (\@ref(eq:tscaled)), under which the
+The assumptions \@ref(eq:tau) & \@ref(eq:tscaled), under which the
 m-out-of-n bootstrap works, are quite weak, but there are nevertheless
 some estimators that violate these conditions. For example, inconsistent
 estimators, i.e., estimators that do not converge in probability to the
@@ -818,7 +813,7 @@ $$\label{eq:mu1}
   \hat{\mu}_1=X_1   (\#eq:mu1)$$
 The distribution of this estimator is the same for all sample sizes, and
 the scaling factor is thus $\tau_n\propto 1$, which fulfills condition
-(\@ref(eq:tscaled)), but violates condition (\@ref(eq:tau)). The second
+\@ref(eq:tscaled), but violates condition \@ref(eq:tau). The second
 estimator estimates the parameter $\lambda$ of a Poisson distribution.
 For a Poisson distribution, both mean and variance are $\lambda$, which
 allows for the construction of an unbiased estimator for $\lambda$ from
@@ -827,11 +822,11 @@ variance as follows:
 $$\label{eq:lambdan}
   \hat{\lambda}_n = n\overline{X} - (n-1)S^2 = \sum_{i=1}^n X_i - \sum_{i=1}^n \left( X_i - \overline{X} \right)^2   (\#eq:lambdan)$$
 As both $\overline{X}$ and $S^2$ are root-$n$ consistent estimators, the
-scaling factor for condition (\@ref(eq:tscaled)) to hold is
+scaling factor for condition \@ref(eq:tscaled) to hold is
 $\tau_n\propto n^{-1/2}$, which again is in violation of condition
-(\@ref(eq:tau)).
+\@ref(eq:tau).
 
-As the assumptions (\@ref(eq:tau)) & (\@ref(eq:tscaled)) are only
+As the assumptions \@ref(eq:tau) & \@ref(eq:tscaled) are only
 sufficient, but not necessary conditions for the m-out-of-n bootstrap,
 we first estimated the coverage probability of the "basic" m-out-of-n
 bootstrap interval when the correct scaling factor $\tau_n$ is provided.
@@ -862,7 +857,7 @@ estimating the scaling factor $\tau_n$ is highly sensitive to a
 parameter for which no universal recommendations can be made. It is thus
 recommended to estimate $\tau_n$ by a different method, e.g., by model
 based Monte Carlo simulations of the variance of the estimator and
-estimating it by means of Eq. (\@ref(eq:vartn)). For a data based choice
+estimating it by means of Eq. \@ref(eq:vartn). For a data based choice
 of $m$, the method by @bickel:2008 as implemented in
 `estimate.m(..., method="bickel")` can be recommended, according to our
 simulations.
@@ -871,6 +866,7 @@ simulations.
 
 We thank the anonymous reviewers for their valuable comments and for the
 suggestion to investigate the case when the assumptions are violated.
+:::::
 
 [^1]: This article used version 2.0.x, available, e.g., from
     <https://github.com/cdalitz/moonboot>.
