RJ-2025-031 fix case-sensitive citation

--- a/_articles/RJ-2025-031/RJ-2025-031.Rmd
+++ b/_articles/RJ-2025-031/RJ-2025-031.Rmd
@@ -83,7 +83,7 @@ bootstrap is more versatile because it neither relies on a likelihood
 function, nor does it require asymptotic normality. The bootstrap has
 thus become a standard technique for estimating confidence intervals,
 and it is even included in vanilla R with the package **boot**
-[@R:boot], which implements five different methods in `boot.ci()`.
+[@r:boot], which implements five different methods in `boot.ci()`.
 
 There are, however, bootstrap inconsistent estimators, i.e., estimators
 for which the n-out-of-n bootstrap fails to yield confidence intervals
