--- a/editors.Rmd
+++ b/editors.Rmd
@@ -14,20 +14,21 @@ d-article > * {
 
 ## Editor-in-Chief
 
-[Rob Hyndman](https://robjhyndman.com), Monash University, Australia. r-journal@r-project.org
+[Emi Tanaka](https://emitanaka.org), Australian National University, Australia
+
 
 ## Executive editors
 
-- [Emi Tanaka](https://emitanaka.org), Australian National University, Australia
-- [Mark van der Loo](https://www.markvanderloo.eu), Statistics Netherlands and University of Leiden, The Netherlands
+- [Vincent Arel-Bundock](https://arelbundock.com), University of Montreal, Canada
+- [Rob Hyndman](https://robjhyndman.com), Monash University, Australia. r-journal@r-project.org
 - [Emily Zabor](https://www.emilyzabor.com), Case Western Reserve University, Cleveland Clinic and Taussig Cancer Institute, USA.
 
 ## Associate editors
 
 - [Rafael de Andrade Moral](https://rafamoral.github.io), Maynooth University, Ireland
 - [David Ardia](https://ardiad.github.io), HEC Montréal, Canada
-- [Vincent Arel-Bundock](https://arelbundock.com), University of Montreal, Canada
 - [Rasmus Bååth](https://www.sumsar.net), Lund University, Sweden
+- [Maciej Beręsewicz](https://maciejberesewicz.com/),  Poznań University of Economics and Business, Poland
 - [Przemek Biecek](https://pbiecek.github.io), University of Warsaw, Poland
 - [Kevin Burke](https://kevinburke.ie), University of Limerick, Ireland
 - [Mine Çetinkaya-Rundel](https://mine-cr.com), Duke University, USA
@@ -57,7 +58,7 @@ d-article > * {
 
 ## Technical editor
 
-- [Mitchell O'Hara-Wild](https://mitchelloharawild.com), Nectric, Australia
+- [Abhishek Ulayil](https://www.linkedin.com/in/abhishek-ulayil-666b647b/), India
 
 ## Editorial advisory board
 
@@ -76,7 +77,7 @@ Vince Carey (2009), Peter Dalgaard (2010), Heather Turner (2011), Martyn
 Plummer (2012), Hadley Wickham (2013), Deepayan Sarkar (2014), Bettina Grün
 (2015), Michael Lawrence (2016), Roger Bivand (2017), John Verzani (2018),
 Norman Matloff (2019), Michael Kane (2020), Dianne Cook (2021), Catherine
-Hurley (2022), Simon Urbanek (2023), Mark van der Loo (2024)
+Hurley (2022), Simon Urbanek (2023), Mark van der Loo (2024), Rob Hyndman (2025)
 
 ## Past Associate Editors
 
