Fixed editor email address

--- a/editors.Rmd
+++ b/editors.Rmd
@@ -14,13 +14,13 @@ d-article > * {
 
 ## Editor-in-Chief
 
-[Emi Tanaka](https://emitanaka.org), Australian National University, Australia
+[Emi Tanaka](https://emitanaka.org), Australian National University, Australia.  r-journal@r-project.org
 
 
 ## Executive editors
 
 - [Vincent Arel-Bundock](https://arelbundock.com), University of Montreal, Canada
-- [Rob Hyndman](https://robjhyndman.com), Monash University, Australia. r-journal@r-project.org
+- [Rob Hyndman](https://robjhyndman.com), Monash University, Australia.
 - [Emily Zabor](https://www.emilyzabor.com), Case Western Reserve University, Cleveland Clinic and Taussig Cancer Institute, USA.
 
 ## Associate editors
