Added section on bib files to submission guidelines

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -44,6 +44,10 @@ If you do use LaTeX, you must use the [LaTeX template](https://github.com/rjourn
 
 The `rjtools` check functions described below can also be applied to check your files prior to submission.
 
+### bib files
+
+Whether you use Rmarkdown or LaTeX, your references need to be contained in a `.bib` file. Please do not send us enormous bib files containing many references that you do not cite. Your submitted bib file should contain only the references actually cited in your paper. Please also check that all references fields are properly formatted. To preserve capitalization, wrap words such as `{R}` or package names in braces. Do not wrap all titles in braces, as this overrides the journal's reference style.
+
 # Checking your article
 
 The `rjtools` package has a number of functions which can help you check that your article is ready to submit. These include:
