change form to one owned by rjournal.submission account

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -66,7 +66,7 @@ The `rjtools` package has a number of functions which can help you check that yo
 
 # Submitting your article
 
-To submit an article to the R Journal, you will need to complete [this form](https://forms.gle/ykj6QcoGQD5ctnA5A).
+To submit an article to the R Journal, you will need to complete [this form](https://forms.gle/Eqkf6cFJM3mjuxZUA).
 
 Your files will need to be uploaded in a zip file that should contain:
 
