enter statement about not allowing manual entry of R outputs in source file for Rmd

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -30,6 +30,8 @@ Figures and tables should have alt-text in chunk specifications, to assist with 
 
 Titles and abstract should be in plain text, with the abstract no more than 250 words.
 
+Ensure that R outputs are from an evaluation of R code rather than manually entering the outputs in the Rmd file.
+
 ### Rmarkdown using rticles
 
 The `rticles::rjournal_article` output format has been deprecated in favour of `rjtools`. Please use `rjtools` instead of `rticles`.
