Updated shiny app link in RJ-2014-031

--- a/_articles/RJ-2014-031/RJ-2014-031.Rmd
+++ b/_articles/RJ-2014-031/RJ-2014-031.Rmd
@@ -18,7 +18,7 @@ abstract: Assessing the assumption of multivariate normality is required by many
   robust Mahalanobis distances. Moreover, this package offers functions to check the
   univariate normality of marginal distributions through both tests and plots. Furthermore,
   especially for non-R users, we provide a user-friendly web application of the package.
-  This application is available at <http://www.biosoft.hacettepe.edu.tr/MVN/>.
+  This application is available at <https://biosoft.shinyapps.io/mvn-shiny-app/> (link updated 27 Jan 2026).
 author:
 - name: Selcuk Korkmaz
   affiliation: Department of Biostatistics, Hacettepe University
@@ -190,7 +190,7 @@ $\mu$ and variance $\sigma^2$ as given below (updated 2025-08-29: $\mu$ and $\si
 
 $$\begin{aligned}
   \mu       = & \, 1 - a^{-p/2}\left(1 + \frac{p\,\beta^{2}}{a} + \frac{p(p+2)\,\beta^{4}}{2a^{2}}\right)\\
-  \sigma^2  = & \, 2(1+4\beta^{2})^{-p/2} + 2a^{-p}\!\left(1 + \frac{2p\beta^{4}}{a^{2}} + \frac{3p(p+2)\beta^{8}}{4a^{4}}\right)\\ 
+  \sigma^2  = & \, 2(1+4\beta^{2})^{-p/2} + 2a^{-p}\!\left(1 + \frac{2p\beta^{4}}{a^{2}} + \frac{3p(p+2)\beta^{8}}{4a^{4}}\right)\\
               & \, - 4w_{\beta}^{-p/2}\!\left(1 + \frac{3p\beta^{4}}{2w_{\beta}} + \frac{p(p+2)\beta^{8}}{2w_{\beta}^{2}}\right)
 \end{aligned}$$
 
@@ -226,7 +226,7 @@ obtained from the normality transformation proposed by
 $$\label{eq:xandwjs}
 \begin{array}{l l l l}
   \text{if } \: 4\leq n \leq 11; & \qquad x = n \quad & \text{and} & \quad w_j = -\text{log}\left[\gamma - \text{log}\left(1- W_j\right)\right] \\
- \text{if } \: 12\leq n \leq 2000; & \qquad x = \text{log} (n) \quad & \text{and} & \quad w_j = \text{log}\left(1- W_j\right) 
+ \text{if } \: 12\leq n \leq 2000; & \qquad x = \text{log} (n) \quad & \text{and} & \quad w_j = \text{log}\left(1- W_j\right)
 \end{array}  (\#eq:xandwjs)  $$
 
 As seen from equation \@ref(eq:xandwjs), $x$ and $w_j$-s change with the
@@ -234,7 +234,7 @@ sample size ($n$). By using equation \@ref(eq:xandwjs), transformed
 values of each random variable can be obtained from equation
 \@ref(eq:zjs).
 
-$$\label{eq:zjs}  
+$$\label{eq:zjs}
   Z_j = \frac{w_j - \mu}{\sigma}  (\#eq:zjs)  $$
 
 where $\gamma$, $\mu$ and $\sigma$ are derived from the polynomial
@@ -243,10 +243,10 @@ coefficients are provided by @royston1992approx for different sample
 sizes.
 
 $$\begin{aligned}
- \label{eq:polygms} 
+ \label{eq:polygms}
   \gamma =  & \: a_{0\gamma} + a_{1\gamma}x + a_{2\gamma}x^2 + \cdots + a_{d\gamma}x^{d} \nonumber \\
   \mu =     & \: a_{0\mu} + a_{1\mu}x + a_{2\mu}x^2 + \cdots + a_{d\mu}x^{d} \\
-  \text{log}(\sigma) =  & \: a_{0\sigma} + a_{1\sigma}x + a_{2\sigma}x^2 + \cdots + a_{d\sigma}x^{d} \nonumber  
+  \text{log}(\sigma) =  & \: a_{0\sigma} + a_{1\sigma}x + a_{2\sigma}x^2 + \cdots + a_{d\sigma}x^{d} \nonumber
 \end{aligned}  (\#eq:polygms)  $$
 
 The Royston's test statistic for multivariate normality is as follows:
@@ -259,9 +259,9 @@ is the cumulative distribution function for the standard normal
 distribution such that,
 
 $$\begin{aligned}
-  \label{eq:edf}  
+  \label{eq:edf}
   e       &= p / [1 + (p - 1)\bar{c}] \nonumber \\
-  \psi_j   &= \left\{\Phi^{-1}\left[\Phi(-Z_j)/2\right]\right\}^2, \qquad j=1,2,\ldots,p.  
+  \psi_j   &= \left\{\Phi^{-1}\left[\Phi(-Z_j)/2\right]\right\}^2, \qquad j=1,2,\ldots,p.
 \end{aligned}  (\#eq:edf)  $$
 
 As seen from equation \@ref(eq:edf), another extra term $\bar{c}$ has to
@@ -314,7 +314,7 @@ Similarly, the *Iris* data can be loaded from the R database by using
 the following R code:
 
 ``` r
-# load Iris data 
+# load Iris data
 data(iris)
 ```
 
@@ -346,23 +346,23 @@ result
 ```
 
 ``` r
-   Mardia's Multivariate Normality Test 
---------------------------------------- 
-   data : setosa 
+   Mardia's Multivariate Normality Test
+---------------------------------------
+   data : setosa
 
-   g1p            : 3.079721 
-   chi.skew       : 25.66434 
-   p.value.skew   : 0.1771859 
+   g1p            : 3.079721
+   chi.skew       : 25.66434
+   p.value.skew   : 0.1771859
 
-   g2p            : 26.53766 
-   z.kurtosis     : 1.294992 
-   p.value.kurt   : 0.1953229 
+   g2p            : 26.53766
+   z.kurtosis     : 1.294992
+   p.value.kurt   : 0.1953229
 
-   chi.small.skew : 27.85973 
-   p.value.small  : 0.1127617 
+   chi.small.skew : 27.85973
+   p.value.small  : 0.1127617
 
-   Result         : Data are multivariate normal. 
---------------------------------------- 
+   Result         : Data are multivariate normal.
+---------------------------------------
 ```
 
 Here:
@@ -397,15 +397,15 @@ result
 ```
 
 ``` r
-  Henze-Zirkler's Multivariate Normality Test 
---------------------------------------------- 
-  data : setosa 
+  Henze-Zirkler's Multivariate Normality Test
+---------------------------------------------
+  data : setosa
 
-  HZ      : 0.9488453 
-  p-value : 0.04995356 
+  HZ      : 0.9488453
+  p-value : 0.04995356
 
-  Result  : Data are not multivariate normal. 
---------------------------------------------- 
+  Result  : Data are not multivariate normal.
+---------------------------------------------
 ```
 
 Here, `HZ` is the value of the Henze-Zirkler's test statistic at
@@ -429,15 +429,15 @@ result
 ```
 
 ``` r
-  Royston's Multivariate Normality Test 
---------------------------------------------- 
-  data : setosa 
+  Royston's Multivariate Normality Test
+---------------------------------------------
+  data : setosa
 
-  H       : 31.51803 
-  p-value : 2.187653e-06 
+  H       : 31.51803
+  p-value : 2.187653e-06
 
-  Result  : Data are not multivariate normal. 
---------------------------------------------- 
+  Result  : Data are not multivariate normal.
+---------------------------------------------
 ```
 
 Here, `H` is the value of the Royston's test statistic at significance
@@ -519,7 +519,7 @@ following code chunk is used to perform the Shapiro-Wilk's normality
 test on each variable:
 
 ``` r
-uniNorm(setosa, type = "SW") 
+uniNorm(setosa, type = "SW")
 ```
 
 ``` r
@@ -542,7 +542,7 @@ are given in Table [1](#tbl:setosa).
   ------------------------------------------
   Test              Test Statistic   p-value
   --------------- ---------------- ---------
-  Mardia                           
+  Mardia
 
   Skewness                  11.249     0.338
 
@@ -626,7 +626,7 @@ statistical significance of bivariate normal distribution of the
   ------------------------------------------
   Test              Test Statistic   p-value
   --------------- ---------------- ---------
-  Mardia                           
+  Mardia
 
   Skewness                   0.760     0.944
 
@@ -692,11 +692,11 @@ outliers. For this example, we will use another subset of the *Iris*
 data, which is *versicolor* flowers, with the first three variables.
 
 ``` r
-versicolor <- iris[51:100, 1:3] 
+versicolor <- iris[51:100, 1:3]
 # Mahalanobis distance
-result <- mvOutlier(versicolor, qqplot = TRUE, method = "quan") 
+result <- mvOutlier(versicolor, qqplot = TRUE, method = "quan")
 # Adjusted Mahalanobis distance
-result <- mvOutlier(versicolor, qqplot = TRUE, method = "adj.quan") 
+result <- mvOutlier(versicolor, qqplot = TRUE, method = "adj.quan")
 ```
 
 <figure id="fig:mvOutlier">
@@ -815,4 +815,4 @@ Research Fund of Marmara University \[FEN-C-DRP-120613-0273\].
 
 [^1]: <http://www.rstudio.com/shiny/>
 
-[^2]: <http://www.biosoft.hacettepe.edu.tr/MVN>
+[^2]: <https://biosoft.shinyapps.io/mvn-shiny-app/> (link updated 27 Jan 2026)
