RJ-2025-044 \hdots -> \ldots for MathJax

--- a/_articles/RJ-2025-044/RJ-2025-044.Rmd
+++ b/_articles/RJ-2025-044/RJ-2025-044.Rmd
@@ -249,7 +249,7 @@ Additionally, GVAR models require, as an intermediate step, the specification of
 \end{equation}
 
 
-Last, to compose the $F$-dimensional state vector for $F = G + CK$, we gather the global economic variables and the country-specific risk factors, as $\boldsymbol{Z_t} = [\boldsymbol{M_{t}^{W^\top}}$, $\boldsymbol{Z_{1,t}}^\top$, $\boldsymbol{Z_{2,t}}^\top, \hdots	\boldsymbol{Z_{C,t}}^\top]^\top$. As such, we can form a first order GVAR process as
+Last, to compose the $F$-dimensional state vector for $F = G + CK$, we gather the global economic variables and the country-specific risk factors, as $\boldsymbol{Z_t} = [\boldsymbol{M_{t}^{W^\top}}$, $\boldsymbol{Z_{1,t}}^\top$, $\boldsymbol{Z_{2,t}}^\top, \ldots	\boldsymbol{Z_{C,t}}^\top]^\top$. As such, we can form a first order GVAR process as
 	\begin{align}
 	& \underset{(F \times 1)}{\vphantom{\Big|}
 	\boldsymbol{Z_t}} =
