--- a/articles/RJ-2025-045/RJ-2025-045.tex
+++ b/articles/RJ-2025-045/RJ-2025-045.tex
@@ -389,7 +389,7 @@ explainers_qrf <- ASexplainer(training, data = data$x.test, y = data$y.test, lab
 # Compute model performance metrics for each explainer
 mp_qrf <- lapply(explainers_qrf, DALEX::model_performance)
 # Plot the performance metrics
-do.call(plot, unname(mp_qrf))
+do.call(plot, unname(mp_qrf)) + theme_bw(base_line_size = 0.5)
 \end{verbatim}
 
 \begin{figure}[ht]
@@ -411,7 +411,7 @@ do.call(plot, c(unname(vi_qrf), list(max_vars = 5)))
 # Compute PDP for the variable 'degree' for each model
 pdp_qrf <- lapply(explainers_qrf, DALEX::model_profile, variable = "degree", type = "partial")
 # Plot the PDPs generated
-do.call(plot, unname(pdp_qrf))
+do.call(plot, unname(pdp_qrf)) + theme_bw(base_line_size = 0.5)
 \end{verbatim}
 
 \section{Example on a larger dataset}\label{example-on-a-larger-dataset}
