RJ-2025-042 author corrections

--- a/_articles/RJ-2025-042/RJ-2025-042.Rmd
+++ b/_articles/RJ-2025-042/RJ-2025-042.Rmd
@@ -44,11 +44,11 @@ author:
   - Spain
   - |
     [borja.calvo@ehu.eus](borja.calvo@ehu.eus){.uri}
-date: '2026-02-04'
+date: '2026-02-11'
 date_received: '2025-03-31'
 journal:
   firstpage: 255
-  lastpage: 274
+  lastpage: 275
 volume: 17
 issue: 4
 slug: RJ-2025-042
@@ -72,6 +72,10 @@ draft: no
 
 ---
 
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(fig.align = "center")
+```
 
 :::: article
 ## Introduction
@@ -329,7 +333,7 @@ late in the evolution do not end up with proportions that are too small
 solely due to their position in the topology, preventing the deviation
 from the expected clone proportion distribution for this type of
 evolution model. These values have been chosen empirically, and their
-effect is illustrated in Figure \@ref(ternary_plots), which shows how 5,000 random samples from
+effect is illustrated in Figure \@ref(fig:ternaryplots), which shows how 5,000 random samples from
 the mentioned Dirichlet distributions (for the particular case of 3
 dimensions, i.e., one parent and two children nodes) are distributed. As
 observed, in the case of positive selection
@@ -344,20 +348,9 @@ $\alpha$ value. This means that samples $(x_i, x_j, x_k)$ are less
 sparse in neutral evolution, with larger values for $x_2$ and $x_3$ in
 this case, which represent the children nodes.
 
-<figure id="ternary_plots">
-<img src="figs/ternary_plots_cropped.png" style="width:100.0%"
-alt="graphic without alt text" />
-<figcaption>Figure 1: Ternary density plots of 5,000 samples drawn from
-two 3-dimensional Dirichlet distributions. The parameters of the
-Dirichlet distribution on the left are <span
-class="math inline"><em>α</em></span> = (0.3, 0.3, 0.3) and the
-distribution is used to represent positive selection-driven evolution.
-The distribution on the right has parameters <span
-class="math inline"><em>α</em></span> = (5, 10, 10) and is used to
-represent neutral evolution. Samples drawn from these distributions (or
-their generalization to higher spaces) are used to calculate clone
-proportions in each tree multifurcation.</figcaption>
-</figure>
+```{r ternaryplots, echo=FALSE, fig.cap="Ternary density plots of 5,000 samples drawn from two 3-dimensional Dirichlet distributions. The parameters of the Dirichlet distribution on the left are $\\alpha = (0.3, 0.3, 0.3)$ and the distribution is used to represent positive selection-driven evolution. The distribution on the right has parameters $\\alpha = (5, 10, 10)$ and is used to represent neutral evolution. Samples drawn from these distributions (or their generalization to higher spaces) are used to calculate clone proportions in each tree multifurcation."}
+knitr::include_graphics("figs/ternary_plots_cropped.png") 
+```
 
 Taking into account that marginalizing the Dirichlet distribution
 results in a Beta distribution, the proportion of the clone
@@ -560,7 +553,7 @@ following commonly reported values for Illumina data
 [@loman2012performance].
 
 As an illustration of the effect of the noise model, in Figure
-\@ref(F_error_plot), we
+\@ref(fig:Ferrorplot), we
 have depicted the density of the mean absolute error between the
 $\boldsymbol{F^{(n)}}$ matrix and its corresponding noise-free
 $\boldsymbol{F}$ matrix for a collection of noisy instances. As can be
@@ -573,15 +566,9 @@ corresponds to the $f^{(n)}_{ij}$ value. Therefore, the larger the
 number of trials, the closer the noisy VAF value is to the noise-free
 VAF value.
 
-<figure id="F_error_plot">
-<img src="figs/noisy_F_error.png" style="width:100.0%"
-alt="graphic without alt text" />
-<figcaption>Figure 2: Density of the mean absolute error in noisy <span
-class="math inline"><strong>F</strong></span> matrices for different
-<span
-class="math inline"><em>μ</em><sub><em>s</em><em>d</em></sub></span>
-values that correspond to different noise levels.</figcaption>
-</figure>
+```{r Ferrorplot, echo=FALSE, fig.cap="Density of the mean absolute error in noisy $\\boldsymbol{F}$ matrices for different $\\mu_{sd}$ values that correspond to different noise levels."}
+knitr::include_graphics("figs/noisy_F_error.png")
+```
 
 As a final remark, it is important to note that although our data
 simulation procedure follows the ISA, the addition of noise may cause
@@ -941,8 +928,6 @@ follows:
 > plot(phylotree)
 ```
 
-
-
 ```{r phylotree, fig.cap="Phylogenetic tree associated to the generated 'Phylotree' class object.", out.width="50%", echo=FALSE}
 knitr::include_graphics("figs/phylotree.png")
 ```
@@ -1008,7 +993,7 @@ The plots of the three instantiated `Phylotree` class objects are
 depicted in Figure \@ref(fig:phylocomparison).
 
 
-```{r phylocomparison, fig.cap="`phylotree_real`, `phylotree_alg2` and `phylotree_alg1`, from the left to the right.", out.width="100%", echo=FALSE}
+```{r phylocomparison, fig.cap="`phylotree_real`, `phylotree_alg1` and `phylotree_alg2`, from the left to the right.", out.width="100%", echo=FALSE}
 knitr::include_graphics("figs/comparisonphylotrees.png")
 ```
 
