RJ-2025-37 author corrections

--- a/_articles/RJ-2025-037/RJ-2025-037.tex
+++ b/_articles/RJ-2025-037/RJ-2025-037.tex
@@ -2,7 +2,7 @@
 \title{AcceptReject: An R Package for Acceptance-Rejection Method}
 
 
-\author{by Pedro Rafael Diniz Marinho, Vera L. D. Tomazella, and Pedro Luiz Ramos}
+\author{by Pedro Rafael Diniz Marinho and Vera L. D. Tomazella}
 
 \maketitle
 
@@ -456,7 +456,7 @@ system.time({x <- simulation(25L)})
 
 \begin{verbatim}
 #>    user  system elapsed 
-#>   0.006   0.038   0.047
+#>   0.008   0.036   0.041
 \end{verbatim}
 
 \begin{verbatim}
@@ -468,7 +468,7 @@ system.time({y <- simulation(2500L)})
 
 \begin{verbatim}
 #>    user  system elapsed 
-#>   0.006   0.033   0.043
+#>   0.002   0.041   0.043
 \end{verbatim}
 
 \begin{verbatim}
@@ -704,14 +704,4 @@ Department of Statistics\\ Rodovia Washington Luiz, Km 235, Monjolinho\\
 \url{https://www.servidores.ufscar.br/vera/}\\%
 \textit{ORCiD: \href{https://orcid.org/0000-0002-6780-2089}{0000-0002-6780-2089}}\\%
 \href{mailto:vera@ufscar.br}{\nolinkurl{vera@ufscar.br}}%
-}
-
-\address{%
-Pedro Luiz Ramos\\
-Pontificia Universidad Católica de Chile\\%
-Faculty of Mathematics\\ Edificio Rolando Chuaqui, Campus San Joaquín. Avda. Vicuña Mackenna 4860, Macul.\\
-%
-\url{https://www.mat.uc.cl/}\\%
-%
-\href{mailto:pedro.ramos@mat.uc.cl}{\nolinkurl{pedro.ramos@mat.uc.cl}}%
 }
